<resources>
    <string name="app_name">Crap</string>
    <string name="hey_gaurav">Hey Gaurav!</string>
    <string name="jamshedpur">Jamshedpur</string>
    <string name="about">About</string>
    <string name="loop_card">Loop Card</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="release_stable">Release: stable</string>
    <string name="goal">Goal</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</string>
    <string name="contact_us">Contact Us:</string>
    <string name="email_support">Email: support@appname.com</string>
    <string name="address">HQ address: Saket, Delhi, India</string>
    <string name="support_email">Email: support@appname.com</string>
    <string name="next_btn">Next</string>
    <string name="get_started">Get Started</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_history">Payment History</string>
    <string name="transaction_id_b56abczzc">Transaction ID: b56abczzc</string>
    <string name="amount_99_inr">Amount: 99 INR</string>
    <string name="last_payment">Last Payment</string>
    <string name="_21st_july_2019">21st July 2019</string>
    <string name="plan_gold">Plan: Gold</string>
    <string name="valid_till_21st_aug_2019">Valid Till: 21st Aug 2019</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="profile_photo">Profile photo</string>
    <string name="basic_information">Basic Information:</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="addressTxt">Address</string>
    <string name="address_hint">Main Street, House no. 69, NY</string>
    <string name="phone">Phone</string>
    <string name="_91987654321">+91987654321</string>
    <string name="email">Email</string>
    <string name="your_email">your.email@domain.com</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="preference">Preference</string>
    <string name="bus">Bus</string>
    <string name="auto">Auto</string>
    <string name="car">Car</string>
    <string name="others">Others</string>
    <string name="tc"><![CDATA[I agree to all Terms & Conditions. (Read More)]]></string>
</resources>
