<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Payment_details">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_normal_toolbar_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/payments_details_back_btn"
            android:layout_width="@dimen/about_normal_toolbar_icon_wh"
            android:layout_height="@dimen/about_normal_toolbar_icon_wh"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_back"
            android:gravity="center_horizontal|center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/about_normal_toolbar_text_paddingLeft"
            android:paddingLeft="@dimen/about_normal_toolbar_text_paddingLeft"
            android:text="@string/payment_details"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumText"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/last_payment"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumText"
            android:fontFamily="sans-serif-thin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_21st_july_2019"
            android:textColor="@color/black"
            android:textSize="@dimen/smallText"
            android:fontFamily="sans-serif"
            />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:contentPadding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/payment_glance_card"
        android:layout_gravity="start"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_99_inr"
                android:textColor="@color/black"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan_gold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valid_till_21st_aug_2019"
                android:textColor="@color/black"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_id_b56abczzc"
                android:textColor="@color/black"
                android:fontFamily="sans-serif" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="10"
        >
        <TextView
            android:layout_weight="9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/payment_history"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-thin"
            android:textSize="@dimen/mediumText" />

        <ImageView
            android:alpha="0.7"
            android:contentDescription="@string/app_name"
            android:layout_weight="1"
            android:src="@drawable/ic_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>