<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-thin"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hey_gaurav"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jamshedpur"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/my"
            app:civ_border_width="2dp"
            app:civ_border_color="#00ff00"/>
    </LinearLayout>

</LinearLayout>